feat: integrate Zephyr Cloud for edge deployment
- Install zephyr-webpack-plugin
- Wrap all rspack configs with withZephyr()
- Enables automatic remote registration and edge CDN deployment
- All three MFs deploy on build: store, cart, reviews

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "zephyr-webpack-plugin": "^0.1.13"
   }
 }
