--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -14,6 +14,10 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
   },
+  "zephyr:dependencies": {
+    "cart": "-mgs-cart@workspace:*",
+    "reviews": "-mgs-reviews@workspace:*"
+  },
   "devDependencies": {
     "@module-federation/enhanced": "^0.8.4",
     "@rspack/cli": "^1.1.8",
